GNU bug report logs - #11311
24.1.50; Emacs crash on Windows

Previous Next

Package: emacs;

Reported by: nyc4bos <at> aol.com

Date: Sun, 22 Apr 2012 22:53:02 UTC

Severity: normal

Found in version 24.1.50

Done: Juanma Barranquero <lekktu <at> gmail.com>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 11311 in the body.
You can then email your comments to 11311 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-gnu-emacs <at> gnu.org:
bug#11311; Package emacs. (Sun, 22 Apr 2012 22:53:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to nyc4bos <at> aol.com:
New bug report received and forwarded. Copy sent to bug-gnu-emacs <at> gnu.org. (Sun, 22 Apr 2012 22:53:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: nyc4bos <at> aol.com
To: bug-gnu-emacs <at> gnu.org
Subject: 24.1.50; Emacs crash on Windows
Date: Sun, 22 Apr 2012 18:51:12 -0400
[Message part 1 (text/plain, inline)]
After type 'M-x gnus', Emacs crashed and displayed an error box on
Windows:

Error signature
appName: emacs.exe  AppVer 24.1.50.0  ModName: ntdll.dll
ModVer: 5.1.2600.5755     Offset: 0000120e
[8d27_appcompat.txt (text/plain, attachment)]
[Message part 3 (text/plain, inline)]
Doing the exact same thing (with the same setup, except for what is in
anything new/different in lisp/gnus) Emacs 24.0.95 does not cause a crash.

If Emacs crashed, and you have the Emacs process in the gdb debugger,
please include the output from the following gdb commands:
    `bt full' and `xbacktrace'.
For information about debugging Emacs, please read the file
e:/emacs-24.1.50/etc/DEBUG.


In GNU Emacs 24.1.50.1 (i386-mingw-nt5.1.2600)
 of 2012-04-20 on MARVIN
Bzr revision: 107968 monnier <at> iro.umontreal.ca-20120419220225-gijdcbfxuiqy5dhb
Windowing system distributor `Microsoft Corp.', version 5.1.2600
Configured using:
 `configure --with-gcc (4.6) --no-opt --enable-checking --cflags
 -ID:/devel/emacs/libs/libXpm-3.5.8/include
 -ID:/devel/emacs/libs/libXpm-3.5.8/src
 -ID:/devel/emacs/libs/libpng-dev_1.4.3-1/include
 -ID:/devel/emacs/libs/zlib-dev_1.2.5-2/include
 -ID:/devel/emacs/libs/giflib-4.1.4-1/include
 -ID:/devel/emacs/libs/jpeg-6b-4/include
 -ID:/devel/emacs/libs/tiff-3.8.2-1/include
 -ID:/devel/emacs/libs/gnutls-3.0.9/include
 -ID:/devel/emacs/libs/libiconv-1.13.1-1-dev/include
 -ID:/devel/emacs/libs/libxml2-2.7.8/include/libxml2'

Important settings:
  value of $LC_ALL: nil
  value of $LC_COLLATE: nil
  value of $LC_CTYPE: nil
  value of $LC_MESSAGES: nil
  value of $LC_MONETARY: nil
  value of $LC_NUMERIC: nil
  value of $LC_TIME: nil
  value of $LANG: en_US
  value of $XMODIFIERS: nil
  locale-coding-system: cp949
  default enable-multibyte-characters: t

Major mode: Fundamental

Minor modes in effect:
  show-paren-mode: t
  tooltip-mode: t
  mouse-wheel-mode: t
  tool-bar-mode: t
  menu-bar-mode: t
  file-name-shadow-mode: t
  global-font-lock-mode: t
  blink-cursor-mode: t
  auto-composition-mode: t
  auto-encryption-mode: t
  auto-compression-mode: t
  line-number-mode: t
  transient-mark-mode: t

Recent input:
<help-echo> <help-echo> <help-echo> <help-echo> <help-echo> 
<help-echo> <help-echo> <help-echo> <help-echo> <help-echo> 
<menu-bar> <help-menu> <send-emacs-bug-report>

Recent messages:
For information about GNU Emacs and the GNU system, type C-h C-a.

Load-path shadows:
None.

Features:
(shadow sort mail-extr emacsbug message derived format-spec rfc822 mml
mml-sec mm-decode mm-bodies mm-encode mail-parse rfc2231 mailabbrev
nnheader gnus-util gmm-utils mailheader sendmail rfc2047 rfc2045
ietf-drums mm-util mail-prsvr mail-utils advice advice-preload pager
w3m-search w3m help-fns browse-url doc-view easymenu jka-compr dired
desktop image-mode timezone w3m-hist w3m-fb bookmark-w3m w3m-ems w3m-ccl
ccl w3m-favicon w3m-image w3m-proc w3m-util wid-edit w3m-wget server
easy-mmode cl edmacro kmacro paren time-date tooltip ediff-hook vc-hooks
lisp-float-type mwheel dos-w32 disp-table ls-lisp w32-win w32-vars
tool-bar dnd fontset image regexp-opt fringe lisp-mode register page
menu-bar rfn-eshadow timer select scroll-bar mouse jit-lock font-lock
syntax facemenu font-core frame cham georgian utf-8-lang misc-lang
vietnamese tibetan thai tai-viet lao korean japanese hebrew greek
romanian slovak czech european ethiopic indian cyrillic chinese
case-table epa-hook jka-cmpr-hook help simple abbrev minibuffer button
faces cus-face files text-properties overlay sha1 md5 base64 format env
code-pages mule custom widget hashtable-print-readable backquote
make-network-process multi-tty emacs)

Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#11311; Package emacs. (Mon, 23 Apr 2012 02:49:01 GMT) Full text and rfc822 format available.

Message #8 received at 11311 <at> debbugs.gnu.org (full text, mbox):

From: Eli Zaretskii <eliz <at> gnu.org>
To: nyc4bos <at> aol.com
Cc: 11311 <at> debbugs.gnu.org
Subject: Re: bug#11311: 24.1.50; Emacs crash on Windows
Date: Mon, 23 Apr 2012 05:47:55 +0300
> From: nyc4bos <at> aol.com
> Date: Sun, 22 Apr 2012 18:51:12 -0400
> 
> After type 'M-x gnus', Emacs crashed and displayed an error box on
> Windows:
> 
> Error signature
> appName: emacs.exe  AppVer 24.1.50.0  ModName: ntdll.dll
> ModVer: 5.1.2600.5755     Offset: 0000120e

This information is insufficient to debug the problem.  Can you attach
GDB to Emacs and post a backtrace from the crash?




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#11311; Package emacs. (Mon, 23 Apr 2012 20:43:02 GMT) Full text and rfc822 format available.

Message #11 received at 11311 <at> debbugs.gnu.org (full text, mbox):

From: nyc4bos <at> aol.com
To: Eli Zaretskii <eliz <at> gnu.org>
Cc: 11311 <at> debbugs.gnu.org
Subject: Re: bug#11311: 24.1.50; Emacs crash on Windows
Date: Mon, 23 Apr 2012 16:41:40 -0400
Eli Zaretskii <eliz <at> gnu.org> writes:

>> From: nyc4bos <at> aol.com
>> Date: Sun, 22 Apr 2012 18:51:12 -0400
>> 
>> After type 'M-x gnus', Emacs crashed and displayed an error box on
>> Windows:
>> 
>> Error signature
>> appName: emacs.exe  AppVer 24.1.50.0  ModName: ntdll.dll
>> ModVer: 5.1.2600.5755     Offset: 0000120e
>
> This information is insufficient to debug the problem.  Can you attach
> GDB to Emacs and post a backtrace from the crash?

GNU gdb (GDB) 7.4
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "i686-pc-mingw32".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from C:\emacs-24.1.50\bin\emacs.exe...done.
Warning: C:\WINDOWS\Temp\gnu/../lwlib: No such file or directory.
SIGINT is used by the debugger.
Are you sure you want to change it? (y or n) [answered Y; input not from termina
l]
Environment variable "DISPLAY" not defined.
Environment variable "TERM" not defined.

Breakpoint 1 at 0x114ef7f: file w32fns.c, line 7196.
Temporary breakpoint 2 at 0x114f5ce: file sysdep.c, line 859.
(gdb) r
Starting program: C:\emacs-24.1.50\bin\emacs.exe
[New Thread 4200.0x150]
[New Thread 4200.0xcd8]
[New Thread 4200.0x15d8]
[New Thread 4200.0x1690]
[New Thread 4200.0x4cc]
[New Thread 4200.0x166c]
[New Thread 4200.0x15cc]
[New Thread 4200.0x1758]
[New Thread 4200.0x1714]

gnutls.c:204: Emacs fatal error: assertion failed: STRINGP (Fget (Qgnutls_dll,
Cloaded_from))

Breakpoint 1, w32_abort () at w32fns.c:7196
7196    w32fns.c: No such file or directory.
(gdb) bt
(gdb) bt
#0  w32_abort () at w32fns.c:7196
#1  0x01041d97 in die (
    msg=0x15d8118 "assertion failed: STRINGP (Fget (Qgnutls_dll, QCloaded_from))
", file=0x15d810e "gnutls.c", line=204) at alloc.c:6378
#2  0x012c3062 in init_gnutls_functions (libraries=59701686) at gnutls.c:203
#3  0x012c3d0f in Fgnutls_available_p () at gnutls.c:655
#4  0x010367e6 in Ffuncall (nargs=1, args=0x82d400) at eval.c:2932
#5  0x010de846 in exec_byte_code (bytestr=68756641, vector=67050501,
    maxdepth=40, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#6  0x0103775a in funcall_lambda (fun=67079429, nargs=5, arg_vector=0x349a81a)
    at eval.c:3166
#7  0x01036c40 in Ffuncall (nargs=6, args=0x82d710) at eval.c:2984
#8  0x010de846 in exec_byte_code (bytestr=68801745, vector=63161349,
    maxdepth=52, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#9  0x0103775a in funcall_lambda (fun=67077701, nargs=14,
    arg_vector=0x349a81a) at eval.c:3166
#10 0x01036c40 in Ffuncall (nargs=15, args=0x82da30) at eval.c:2984
#11 0x010de846 in exec_byte_code (bytestr=68176401, vector=67586309,
    maxdepth=64, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#12 0x010ddde4 in Fbyte_code (bytestr=68176401, vector=67586309, maxdepth=64)
    at bytecode.c:423
#13 0x01034a7a in eval_sub (form=68781022) at eval.c:2289
#14 0x0103272b in internal_lisp_condition_case (var=55362706,
    bodyform=68781022, handlers=68779702) at eval.c:1402
#15 0x010df26b in exec_byte_code (bytestr=68176753, vector=68418565,
    maxdepth=32, args_template=55158810, nargs=0, args=0x0) at bytecode.c:981
#16 0x0103775a in funcall_lambda (fun=68420869, nargs=1, arg_vector=0x349a81a)
    at eval.c:3166
#17 0x01036c40 in Ffuncall (nargs=2, args=0x82e120) at eval.c:2984
#18 0x010de846 in exec_byte_code (bytestr=65454465, vector=67587205,
    maxdepth=16, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#19 0x0103775a in funcall_lambda (fun=68316005, nargs=2, arg_vector=0x349a81a)
    at eval.c:3166
#20 0x01036c40 in Ffuncall (nargs=3, args=0x82e410) at eval.c:2984
#21 0x010de846 in exec_byte_code (bytestr=64187345, vector=60542053,
    maxdepth=12, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#22 0x010ddde4 in Fbyte_code (bytestr=64187345, vector=60542053, maxdepth=12)
    at bytecode.c:423
#23 0x01034a7a in eval_sub (form=64770478) at eval.c:2289
#24 0x0103272b in internal_lisp_condition_case (var=55362706,
    bodyform=64770478, handlers=64770566) at eval.c:1402
#25 0x010df26b in exec_byte_code (bytestr=64216593, vector=64350469,
    maxdepth=28, args_template=55158810, nargs=0, args=0x0) at bytecode.c:981
#26 0x0103775a in funcall_lambda (fun=55740293, nargs=1, arg_vector=0x349a81a)
    at eval.c:3166
#27 0x01036c40 in Ffuncall (nargs=2, args=0x82ead0) at eval.c:2984
#28 0x010de846 in exec_byte_code (bytestr=58324657, vector=64351237,
    maxdepth=36, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#29 0x0103775a in funcall_lambda (fun=55742405, nargs=1, arg_vector=0x349a81a)
    at eval.c:3166
#30 0x01036c40 in Ffuncall (nargs=2, args=0x82ede0) at eval.c:2984
#31 0x010de846 in exec_byte_code (bytestr=64344913, vector=60269317,
    maxdepth=16, args_template=55158810, nargs=0, args=0x0) at bytecode.c:785
#32 0x0103775a in funcall_lambda (fun=58571397, nargs=3, arg_vector=0x349a81a)
    at eval.c:3166
#33 0x01036f76 in apply_lambda (fun=58571397, args=63719454) at eval.c:3043
#34 0x01034dd6 in eval_sub (form=63719462) at eval.c:2328
#35 0x010302a6 in Fprogn (args=63719430) at eval.c:364
#36 0x01031e09 in Flet (args=63719470) at eval.c:1053
#37 0x01034587 in eval_sub (form=63719518) at eval.c:2231
#38 0x010302a6 in Fprogn (args=63719366) at eval.c:364
#39 0x01037631 in funcall_lambda (fun=63719358, nargs=1, arg_vector=0x82f4f4)
    at eval.c:3159
#40 0x01036d0f in Ffuncall (nargs=2, args=0x82f4f0) at eval.c:2996
#41 0x010e3174 in Fcall_interactively (function=56444602,
    record_flag=55158834, keys=55180037) at callint.c:852
#42 0x01036915 in Ffuncall (nargs=4, args=0x82f720) at eval.c:2942
#43 0x01035e31 in call3 (fn=55278954, arg1=56444602, arg2=55158834,
    arg3=55158810) at eval.c:2735
#44 0x0101fa00 in Fcommand_execute (cmd=56444602, record_flag=55158834,
    keys=55158810, special=55158810) at keyboard.c:10330
#45 0x0101fcf8 in Fexecute_extended_command (prefixarg=55158810)
    at keyboard.c:10419
#46 0x01036842 in Ffuncall (nargs=2, args=0x82f940) at eval.c:2935
#47 0x010e3174 in Fcall_interactively (function=55214778,
    record_flag=55158810, keys=55180037) at callint.c:852
#48 0x01036915 in Ffuncall (nargs=4, args=0x82fb70) at eval.c:2942
#49 0x01035e31 in call3 (fn=55278954, arg1=55214778, arg2=55158810,
    arg3=55158810) at eval.c:2735
#50 0x0101fa00 in Fcommand_execute (cmd=55214778, record_flag=55158810,
    keys=55158810, special=55158810) at keyboard.c:10330
#51 0x0100659b in command_loop_1 () at keyboard.c:1572
#52 0x0103280d in internal_condition_case (bfun=0x10056a7 <command_loop_1>,
    handlers=55216562, hfun=0x1004ec6 <cmd_error>) at eval.c:1448
#53 0x01005303 in command_loop_2 (ignore=55158810) at keyboard.c:1160
#54 0x01032230 in internal_catch (tag=55214562,
    func=0x10052df <command_loop_2>, arg=55158810) at eval.c:1205
#55 0x010052bf in command_loop () at keyboard.c:1139
#56 0x0100489b in recursive_edit_1 () at keyboard.c:759
#57 0x01004bb6 in Frecursive_edit () at keyboard.c:823
#58 0x010028ba in main (argc=1, argv=0xa92490) at emacs.c:1711

Lisp Backtrace:
"gnutls-available-p" (0x82d404)
"network-stream-open-starttls" (0x82d714)
"open-protocol-stream" (0x82da34)
"byte-code" (0x82dcb4)
"nntp-open-connection" (0x82e124)
"nntp-open-server" (0x82e414)
"byte-code" (0x82e664)
"gnus-open-server" (0x82ead4)
"gnus-start-news-server" (0x82ede4)
"gnus-1" (0x82f030)
"let" (0x82f30c)
"gnus" (0x82f4f4)
"call-interactively" (0x82f724)
"execute-extended-command" (0x82f944)
"call-interactively" (0x82fb74)
(gdb)





Reply sent to Juanma Barranquero <lekktu <at> gmail.com>:
You have taken responsibility. (Mon, 23 Apr 2012 23:19:01 GMT) Full text and rfc822 format available.

Notification sent to nyc4bos <at> aol.com:
bug acknowledged by developer. (Mon, 23 Apr 2012 23:19:02 GMT) Full text and rfc822 format available.

Message #16 received at 11311-done <at> debbugs.gnu.org (full text, mbox):

From: Juanma Barranquero <lekktu <at> gmail.com>
To: nyc4bos <at> aol.com
Cc: Eli Zaretskii <eliz <at> gnu.org>, 11311-done <at> debbugs.gnu.org
Subject: Re: bug#11311: 24.1.50; Emacs crash on Windows
Date: Tue, 24 Apr 2012 01:16:59 +0200
On Mon, Apr 23, 2012 at 22:41,  <nyc4bos <at> aol.com> wrote:

> gnutls.c:204: Emacs fatal error: assertion failed: STRINGP (Fget (Qgnutls_dll,
> Cloaded_from))

Yes, (get 'gnutls :loaded-from) returns now a cons, not a string.

Should be fixed in the trunk (revno:108013).

    Juanma




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Tue, 22 May 2012 11:24:03 GMT) Full text and rfc822 format available.

This bug report was last modified 11 years and 349 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.