src/gnutls.c (init_gnutls_functions): Fix bug#11311. The value of :loaded-from is now a cons.